Lecture 59.3 - fix menu icon background bleed

--- a/advanced-css/natours/css/style.css
+++ b/advanced-css/natours/css/style.css
@@ -716,21 +716,29 @@ body {
     .navigation__button {
       top: 4rem;
       right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 2rem;
+      right: 2rem; } }
 
 .navigation__background {
-  height: 6rem;
-  width: 6rem;
+  height: 6.5rem;
+  width: 6.5rem;
   border-radius: 50%;
   position: fixed;
-  top: 6.5rem;
-  right: 6.5rem;
+  top: 6.25rem;
+  right: 6.25rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
   transition: transform 0.6s cubic-bezier(0.83, 0, 0.17, 1); }
   @media (max-width: 56.25em) {
     .navigation__background {
-      top: 4rem;
-      right: 4rem; } }
+      top: 4.25rem;
+      right: 4.25rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 2.25rem;
+      right: 2.25rem; } }
 
 .navigation__nav {
   height: 100vh;
