--- a/advanced-css/natours/sass/layouts/_navigation.scss
+++ b/advanced-css/natours/sass/layouts/_navigation.scss
@@ -20,15 +20,20 @@
       top: 4rem;
       right: 4rem;
     }
+
+    @include respond(phone) {
+      top: 2rem;
+      right: 2rem;
+    }
   }
 
   &__background {
-    height: 6rem;
-    width: 6rem;
+    height: 6.5rem;
+    width: 6.5rem;
     border-radius: 50%;
     position: fixed;
-    top: 6.5rem;
-    right: 6.5rem;
+    top: 6.25rem;
+    right: 6.25rem;
     background-image: radial-gradient(
                         $color-primary-light,
                         $color-primary-dark);
@@ -36,8 +41,13 @@
     transition: transform 0.6s cubic-bezier(0.83, 0, 0.17, 1);
 
     @include respond(tab-port) {
-      top: 4rem;
-      right: 4rem;
+      top: 4.25rem;
+      right: 4.25rem;
+    }
+
+    @include respond(phone) {
+      top: 2.25rem;
+      right: 2.25rem;
     }
   }
 
